maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:23: error: forward reference extends over definition of variable sommeAngle
        sommeAngle+=1
        ^