maze.pledge.PledgeMaze.scala.code
override def run() {
  
  
  def testgauche():Boolean = {
    gauche()
    if (estFaceMur()) {droite();return true}
    droite()
    return false
  }
  


  
  def keepHandOnSideWall():Boolean = {
    var t=false

    if (!estFaceMur && testgauche) {
      avance()
      t=true
      if (!testgauche()) {
        gauche();
        sommeAngle+=1
        avance();
        if (!testgauche()) {
          gauche();
          sommeAngle+=1
          avance();
          
        }}}
    return t
                           
  }
  
  droite()
  var sommeAngle:Int=(-1)
  while (!estSurBiscuit) {

    if (!estFaceMur && sommeAngle==0) {
      avance()
    } else {
    	if (!keepHandOnSideWall()) {droite; sommeAngle-=1}
    }
  }
  prendBiscuit()
  
  
  
}